2018-09-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Minor stm8 peephole improvement.

2018-09-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/Makefile.in: move current directory earlier in
	  the include file search path

2018-09-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2807.c:
	  Fix bug #2807.

2018-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  .version:
	  Make default segment ordering suitable for large memory model.
	* support/regression/tests/gcc-torture-execute-func-ptr-1.c:
	  Enable test that now passes for stm8 large memory model.

2018-08-26 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic14/*,
	  device/lib/pic16/*:
	  Regenerate files to fix bug #2806.
	* src/SDCClospre.cc:
	  Minor lospre code refactoring.

2018-08-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c,
	  support/regression/tests/bug-2804.c:
	  Fix bug #2804.
	* src/stm8/peeph.def:
	  Remove redundant ret.
	* src/SDCClospre.cc:
	  Trigger assertion failure before SIGSEV when dumping graph of non-existing function.

2018-08-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-strcpy-1.c:
	  Reduce risk of timeout due to long test.

2018-08-23 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/stm8.cc:
	  Fix bug #2803.

2018-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/hc08/spec.mk,
	  support/regression/ports/s08/spec.mk,
	  support/regression/tests/gcc-torture-execute-arith-rand.c,
	  support/regression/tests/gcc-torture-execute-strcmp-1.c,
	  support/regression/tests/gcc-torture-execute-strncmp-1.c:
	  Reduce risk of timeouts due to long tests.
	* support/regression/tests/rand.c:
	  Disable a test on the broken OpenBSD.

2018-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* sdcc/doc/sdccman.lyx:
	  Update documentation on library memory models.
