@@ -25,14 +25,12 @@ void
 testTortureExecute (void)
 {
 #if !defined (__SDCC_hc08) && !defined (__SDCC_s08) && !defined (__SDCC_ds390) && !defined (__SDCC_mcs51)
-#if !(defined (__SDCC_stm8) && defined (__SDCC_MODEL_LARGE))
   int (*x)(int, int) = rl_character_len;
   if (x('a', 1) != 1)
     ASSERT (0);
   if (x('\002', 1) != 2)
     ASSERT (0);
   return;
-#endif
 #endif
 }
 
